--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans&family=Roboto&display=swap');
-@tailwind base;
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans&family=Roboto:wght@100;300;400;500;700&display=swap');@tailwind base;
 @tailwind components;
 @tailwind utilities;
 
